# codificador-morse

./: README.md  pyproject.toml
src/codificador-morse/: main.py
src/codificador-morse/encode/: encoder.py
